boreal/tests/assets/invalid_files/compilation/duplicated_rule_name.yar
// [error: rule `a` is already declared in this namespace]
rule a {
    condition: true
}
rule a {
    condition: true
}
